<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/map_view"
        android:enabled="true"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/menu_map_view"/>
    <item
        android:id="@+id/list_view"
        android:enabled="true"
        android:icon="@drawable/baseline_view_list_24"
        android:title="@string/menu_list_view"/>
    <item
        android:id="@+id/workmates"
        android:enabled="true"
        android:icon="@drawable/baseline_group_24"
        android:title="@string/menu_workmates"/>
    <item
        android:id="@+id/chat"
        android:enabled="true"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/menu_chat"/>
</menu>