<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/login_background"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg"
        android:tintMode="src_over"
        app:tint="@color/black_80" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".7"
            android:contentDescription="@string/app_logo"
            android:paddingHorizontal="16dp"
            android:scaleType="fitEnd"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/login_subtitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/emailSignInButton"
                style="@style/FirebaseUI.Button.AccountChooser.EmailButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="8dp"
                android:text="@string/sign_in_email" />

            <Button
                android:id="@+id/googleSignInButton"
                style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="8dp"
                android:text="@string/sign_in_google" />
            
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
